--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/Leagueify/client/issues"
   },
-  "homepage": "https://github.com/Leagueify/client#readme"
+  "homepage": "https://github.com/Leagueify/client#readme",
+  "devDependencies": {
+    "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.10.3",
+    "@types/react": "^18.2.41",
+    "@types/react-dom": "^18.2.17"
+  }
 }
