--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Leagueify's client react app",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --port 3000",
+    "build": "NODE_ENV=production webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +20,7 @@
   "homepage": "https://github.com/Leagueify/client#readme",
   "devDependencies": {
     "css-loader": "^6.8.1",
+    "eslint": "^8.55.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "ts-loader": "^9.5.1",
@@ -30,6 +33,8 @@
     "@types/jest": "^29.5.10",
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.41",
-    "@types/react-dom": "^18.2.17"
+    "@types/react-dom": "^18.2.17",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
