--- a/package.json
+++ b/package.json
@@ -1,49 +1,59 @@
 {
-  "name": "client",
-  "version": "1.0.0",
-  "description": "Leagueify's client react app",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --port 3000",
-    "build": "NODE_ENV=production webpack",
-    "lint": "eslint . --fix --max-warnings=0",
-    "format": "prettier . --write",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Leagueify/client.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Leagueify/client/issues"
-  },
-  "homepage": "https://github.com/Leagueify/client#readme",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-xo": "^0.43.1",
-    "eslint-config-xo-typescript": "^1.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "prettier": "3.1.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.3.2",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  },
-  "dependencies": {
-    "@types/jest": "^29.5.10",
-    "@types/node": "^20.10.3",
-    "@types/react": "^18.2.41",
-    "@types/react-dom": "^18.2.17",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+	"name": "client",
+	"version": "1.0.0",
+	"description": "Leagueify's client react app",
+	"main": "index.js",
+	"scripts": {
+		"start": "webpack serve --port 3000",
+		"build": "NODE_ENV=production webpack",
+		"lint": "eslint . --fix --max-warnings=0",
+		"format": "prettier . --write",
+		"test": "jest",
+		"coverage": "jest --coverage"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Leagueify/client.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Leagueify/client/issues"
+	},
+	"homepage": "https://github.com/Leagueify/client#readme",
+	"devDependencies": {
+		"@testing-library/jest-dom": "^6.1.5",
+		"@testing-library/react": "^14.1.2",
+		"@typescript-eslint/eslint-plugin": "^6.13.1",
+		"@typescript-eslint/parser": "^6.13.1",
+		"css-loader": "^6.8.1",
+		"eslint": "^8.55.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-config-standard-with-typescript": "^40.0.0",
+		"eslint-config-xo": "^0.43.1",
+		"eslint-config-xo-typescript": "^1.0.1",
+		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-jest": "^27.6.0",
+		"eslint-plugin-n": "^16.3.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.33.2",
+		"html-webpack-plugin": "^5.5.3",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"mini-css-extract-plugin": "^2.7.6",
+		"prettier": "3.1.0",
+		"ts-loader": "^9.5.1",
+		"typescript": "^5.3.2",
+		"webpack": "^5.89.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^4.15.1"
+	},
+	"dependencies": {
+		"@types/jest": "^29.5.10",
+		"@types/node": "^20.10.3",
+		"@types/react": "^18.2.41",
+		"@types/react-dom": "^18.2.17",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	}
 }
