--- a/package.json
+++ b/package.json
@@ -49,11 +49,17 @@
 		"webpack-dev-server": "^4.15.1"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.17",
+		"@heroicons/react": "^2.0.18",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/forms": "^0.5.7",
+		"@tailwindcss/typography": "^0.5.10",
 		"@types/jest": "^29.5.10",
 		"@types/node": "^20.10.3",
 		"@types/react": "^18.2.41",
 		"@types/react-dom": "^18.2.17",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"tailwindcss": "^3.3.5"
 	}
 }
