--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"mini-css-extract-plugin": "^2.7.6",
+		"nvm": "^0.0.4",
 		"prettier": "3.1.0",
 		"ts-loader": "^9.5.1",
 		"typescript": "^5.3.2",
