--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@testing-library/react": "^14.1.2",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
 		"@typescript-eslint/parser": "^6.13.1",
+		"autoprefixer": "^10.4.16",
 		"css-loader": "^6.8.1",
 		"eslint": "^8.55.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -42,7 +43,10 @@
 		"jest-environment-jsdom": "^29.7.0",
 		"mini-css-extract-plugin": "^2.7.6",
 		"nvm": "^0.0.4",
+		"postcss": "^8.4.32",
+		"postcss-loader": "^7.3.3",
 		"prettier": "3.1.0",
+		"style-loader": "^3.3.3",
 		"ts-loader": "^9.5.1",
 		"typescript": "^5.3.2",
 		"webpack": "^5.89.0",
